# lotr-sdk

./: README.md
app/: pyproject.toml  requirements.txt
app/client/: movie_quote_api.py
app/core/: movie_quote_sdk.py
app/tests/: end_to_end_test.py  movie_quote_api_test.py  movie_quote_sdk_test.py
