[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotr_sdk_reyka"
version = "0.0.2"
authors = [
  { name="S Reyka", email="spencer.reyka@gmail.com" },
]
description = "A python SDK for the popular LOTR API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hatchways-community/05c864943cb34b22a51692e429bdc847/sampleproject"
"Bug Tracker" = "https://github.com/hatchways-community/05c864943cb34b22a51692e429bdc847/issues"